Suppress dynamic agent loading JVM warnings