@@ -40,6 +40,7 @@ subprojects {
             events "passed", "skipped", "failed"
             showStandardStreams = true
         }
+        jvmArgs '-XX:+EnableDynamicAgentLoading'
     }
 
     tasks.jacocoTestReport {
